Wrapped btns in a flex container from being fixed

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -331,20 +331,26 @@ body {
 
 /* Code for the Format Bar ends here*/
 
+.buttons {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  z-index: 1002;
+}
+
 /* Code for the Settings Button */
 
 .settingsButton {
   display: none;
-  position: fixed;
-  bottom: 170px;
-  right: 20px;
   padding: 10px;
   background-color: #00000027;
   backdrop-filter: blur(20px);
   border-radius: 30px;
   border: 1px solid #ffffff27;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  z-index: 1001;
   animation: screenSaverUp2 1.3s cubic-bezier(0.25, 1.25, 0.5, 1);
 }
 .settings {
@@ -408,9 +414,6 @@ body {
 
 .screensaver{
   display: none;
-  position: fixed;
-  bottom: 95px;
-  right: 20px;
   height: 62px; /*  IDK, This is important to make the button not look oval shaped, Don't remove or alter this Height property */
   padding: 10px;
   background-color: #00000027;
@@ -418,7 +421,6 @@ body {
   border-radius: 50%;
   border: 1px solid #ffffff27;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  z-index: 1001;
   animation: screenSaverUp 1.3s cubic-bezier(0.25, 1.25, 0.5, 1);
 }
 
@@ -462,16 +464,12 @@ body {
 /* Code for the Info Button */
 
 .infoButton {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
   padding: 10px;
   background-color: #00000027;
   backdrop-filter: blur(20px);
   border-radius: 30px;
   border: 1px solid #ffffff27;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
-  z-index: 1002;
 }
 .info {
   width: 40px;
